Fix makefile, make main dummy incase I need it

--- a/Implementations/DS/BST/Makefile
+++ b/Implementations/DS/BST/Makefile
@@ -2,13 +2,13 @@ OBJ = main.o bst.o
 CC = g++
 CFLAGS = -g -Wall -I.
 
-all : main clean
+all : compile clean
 
 compile: $(OBJ)
 	$(CC) $(OBJ) $(CFLAGS) -o main
 
-main.o : main.cpp
-	$(CC) $(CFLAGS) -c main.cpp 
+main.o: main.cpp
+	$(CC) $(CFLAGS) -c main.cpp
 
 bst.o : bst.cpp
 	$(CC) $(CFLAGS) -c bst.cpp
